[package]
name = "lib"
version = "1.0.0"
authors = ["The best developer ever"]
edition = "2021"

[dependencies]
# Import ink!
ink = { version = "4.2.1", default-features = false}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

# OpenBrush dependency
openbrush = { git = "https://github.com/Brushfam/openbrush-contracts", branch = "develop", default-features = false, features = ["payment_splitter"]}

[lib]
name = "name_of_contract"
path = "lib.rs"

[features]
default = ["std"]
std = [
  "ink/std",
  "scale/std",
  "scale-info/std",
  # OpenBrush dependency
  "openbrush/std",
]
ink-as-dependency = []